# tCerver

./: .clangd  .gitignore  CMakeLists.txt  README.md
entry/: queue_test.cpp  reg_test.cpp  server.cpp  util_test.cpp
logs/: dummy.txt
resource/: index.html
src/: CMakeLists.txt  EPoll.cpp  EPoll.hpp  Exceptions.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HTTPUnit.cpp  HTTPUnit.hpp  Logs.hpp  MultiThreadQueue.hpp  Scheduler.cpp  Scheduler.hpp  Socket.cpp  Socket.hpp  SocketBase.cpp  SocketBase.hpp  TCPServer.cpp  TCPServer.hpp  Task.hpp  utilities.cpp  utilities.hpp
static/: tcerver.hpp
tests/: test.cpp  tests.py
